--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="personagens-animes">
         <img src="wa2.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Chifuyu Matsuno</h3>
+        <h3 class="personagem-nome">Zoologia UEPG</h3>
         <a href="" target="blank" class="personagens-animes-dois">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
@@ -43,7 +43,7 @@
 
       <div class="personagens-animes">
         <img src="wa3.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Takashi Mitsuya</h3>
+        <h3 class="personagem-nome">Curitiba</h3>
         <a href="" target="blank" class="personagens-animes-tres">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
@@ -51,7 +51,7 @@
 
       <div class="personagens-animes">
         <img src="wa4.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Ray</h3>
+        <h3 class="personagem-nome">Bondinho de Balnéario</h3>
         <a href="" target="blank" class="personagens-animes-quatro">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
@@ -59,7 +59,7 @@
 
       <div class="personagens-animes">
         <img src="wa5.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Norman</h3>
+        <h3 class="personagem-nome">Zoologia UEPG</h3>
         <a href="" target="blank" class="personagens-animes-cinco">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
@@ -67,7 +67,7 @@
 
       <div class="personagens-animes">
         <img src="wa6.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Emma</h3>
+        <h3 class="personagem-nome">Praia Forte-SC</h3>
         <a href="" target="blank" class="personagens-animes-seis">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
@@ -75,7 +75,7 @@
 
       <div class="personagens-animes">
         <img src="wa7.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Toshiro Hitsugaya</h3>
+        <h3 class="personagem-nome">Imbituva</h3>
         <a href="" target="blank" class="personagens-animes-sete">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
@@ -83,7 +83,7 @@
 
       <div class="personagens-animes">
         <img src="wa8.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Byakuya Kuchiki</h3>
+        <h3 class="personagem-nome">Ivai</h3>
         <a href="" target="blank" class="personagens-animes-oito">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
@@ -91,7 +91,7 @@
 
       <div class="personagens-animes">
         <img src="wa9.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Ichigo Kurosaki</h3>
+        <h3 class="personagem-nome">Museu do Olho</h3>
         <a href="" target="blank" class="personagens-animes-nove">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
