--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
 
     <h2 class="fotos-titulo">Fotos</h2>
 
+    <div class="todos-personagens">
+      <div class="personagens-animes">
+        <img src="" alt="" class="personagens-animes-imagem">
+        <h3 class="personagem-nome">Manjiro Sano ou Mikey</h3>
+        <a href="" target="blank" class="personagens-animes-um">
+          <img src="" alt="" class="personagens-animes-icone">
+        </a>
+      </div>
+
       <div class="personagens-animes">
         <img src="wa2.jpg" alt="" class="personagens-animes-imagem">
         <h3 class="personagem-nome">Zoologia UEPG</h3>
