--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="todos-personagens">
       <div class="personagens-animes">
-        <img src="" alt="" class="personagens-animes-imagem">
+        <img src="wa1.jpg" alt="" class="personagens-animes-imagem">
         <h3 class="personagem-nome">Manjiro Sano ou Mikey</h3>
         <a href="" target="blank" class="personagens-animes-um">
           <img src="" alt="" class="personagens-animes-icone">
