--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="todos-personagens">
       <div class="personagens-animes">
         <img src="wa1.jpg" alt="" class="personagens-animes-imagem">
-        <h3 class="personagem-nome">Manjiro Sano ou Mikey</h3>
+        <h3 class="personagem-nome">Museu de PG</h3>
         <a href="" target="blank" class="personagens-animes-um">
           <img src="" alt="" class="personagens-animes-icone">
         </a>
