--- a/index.html
+++ b/index.html
@@ -110,6 +110,22 @@
   </section>
 
   <footer class="rodape">
+    background-color: black;
+    text-align: center;
+    padding: 50px;
+    border-top: 2px solid #ffff00b2;
+}
+
+.rodape-titulo{
+    font-size: 25px;
+    font-weight: bold;
+    color: #ffff00b2;
+}
+
+.rodape-imagem{
+    width: 100px;
+    filter: invert();
+}
   </footer>
 
 </body>
