--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
   </section>
 
   <footer class="rodape">
-  
+    <img src="imagens/estude.png" alt="Imagem do Rodapé" class="rodape-imagem">
+    <h2 class="rodape-titulo">Aluna <br>Walesca &reg; </h2>
 }
   </footer>
 
